--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         include:
           - os: macos-11 # At the time of writing macos-latest is mac 10; we need 11 to build a universal binary
-            build-group: darwin-x64
+            build-group: darwin-x64+arm64
           - os: windows-latest
             build-group: win-x64
           - os: ubuntu-latest
