--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -24,7 +24,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest]
-        node: [16]
+        node: [18, 20, 22]
         runtime_link: [static, shared]
         # This OS does not have the ability to install liblzma globally
         use_global_liblzma: [false]
@@ -33,19 +33,28 @@ jobs:
     name: Node ${{ matrix.node }} on ${{ matrix.os }} / System Xz ? ${{ matrix.use_global_liblzma }} / Threading enabled ? ${{ matrix.enable_threads }} / Runtime is ${{ matrix.runtime_link }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           submodules: recursive
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
       - name: Use node ${{ matrix.node }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
           architecture: x64
+          cache: 'pnpm'
       - name: Install
-        run: yarn install
+        run: pnpm install --frozen-lockfile
         env:
           USE_GLOBAL: ${{ matrix.use_global_liblzma }}
           RUNTIME_LINK: ${{ matrix.runtime_link }}
           ENABLE_THREAD_SUPPORT: ${{ matrix.enable_threads }}
+      - name: Build
+        run: pnpm run build
+      - name: Lint
+        run: pnpm run check
       - name: Test
-        run: yarn test
+        run: pnpm test
