chore: add pnpm workspace configuration to specify only built dependencies and upgrade all dependencies to latest

--- a/biome.json
+++ b/biome.json
@@ -13,6 +13,7 @@
       "**/*.js",
       "**/*.mts",
       "**/*.cts",
+      "**/*.json",
       "!**/lib/**/*",
       "!**/build/**/*",
       "!**/node_modules/**/*",
