--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     /* Language and Environment */
     "target": "ES2020",
     "lib": ["ES2020", "ES2020.Promise"],
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
 
     /* Output */
     "outDir": "./lib",
