--- a/.github/workflows/test-with-artifacts.yml
+++ b/.github/workflows/test-with-artifacts.yml
@@ -17,13 +17,14 @@ jobs:
     with:
       upload-artifacts: true
 
-  test:
+  # Smoke tests - always run (minimal coverage)
+  test-smoke:
     needs: build
+    if: ${{ inputs.test-matrix == 'smoke' || inputs.test-matrix == 'full' }}
     strategy:
       fail-fast: false
       matrix:
         include:
-          # Smoke test matrix - minimal coverage for PR
           - os: ubuntu-latest
             node: 20
             target: linux-x64
@@ -33,35 +34,6 @@ jobs:
           - os: windows-latest
             node: 20
             target: win32-x64
-          # Full test matrix - comprehensive coverage for master
-          - os: ubuntu-latest
-            node: 18
-            target: linux-x64
-            full-only: true
-          - os: ubuntu-latest
-            node: 22
-            target: linux-x64
-            full-only: true
-          - os: macos-latest
-            node: 18
-            target: darwin-x64
-            full-only: true
-          - os: macos-latest
-            node: 22
-            target: darwin-x64
-            full-only: true
-          - os: windows-latest
-            node: 18
-            target: win32-x64
-            full-only: true
-          - os: windows-latest
-            node: 22
-            target: win32-x64
-            full-only: true
-        exclude:
-          - full-only: true
-            # Exclude full matrix jobs when running smoke tests
-            ${{ inputs.test-matrix == 'smoke' }}
     runs-on: ${{ matrix.os }}
     name: Test ${{ matrix.target }} / Node ${{ matrix.node }}
     steps:
@@ -95,3 +67,60 @@ jobs:
       - name: Lint (Node 20 only)
         if: ${{ matrix.node == '20' }}
         run: pnpm run check
+
+  # Full tests - only run when explicitly requested
+  test-full:
+    needs: build
+    if: ${{ inputs.test-matrix == 'full' }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: ubuntu-latest
+            node: 18
+            target: linux-x64
+          - os: ubuntu-latest
+            node: 22
+            target: linux-x64
+          - os: macos-latest
+            node: 18
+            target: darwin-x64
+          - os: macos-latest
+            node: 22
+            target: darwin-x64
+          - os: windows-latest
+            node: 18
+            target: win32-x64
+          - os: windows-latest
+            node: 22
+            target: win32-x64
+    runs-on: ${{ matrix.os }}
+    name: Test ${{ matrix.target }} / Node ${{ matrix.node }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+      - name: Use node ${{ matrix.node }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+          architecture: x64
+          cache: 'pnpm'
+          cache-dependency-path: pnpm-lock.yaml
+      - name: Download prebuilds
+        uses: actions/download-artifact@v4
+        with:
+          name: prebuilds-${{ matrix.target }}
+          path: prebuilds/
+      - name: Download build cache
+        uses: actions/download-artifact@v4
+        with:
+          name: build-cache-${{ matrix.target }}
+          path: .
+      - name: Install test dependencies only
+        run: pnpm install --frozen-lockfile --production=false
+      - name: Run tests
+        run: pnpm test
+      - name: Type check
+        run: pnpm run type-check
