--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -58,6 +58,9 @@ jobs:
           architecture: x64
           cache: 'pnpm'
           cache-dependency-path: pnpm-lock.yaml
+      - name: Install system liblzma development package
+        if: ${{ matrix.use_global_liblzma == 'true' }}
+        run: sudo apt-get update && sudo apt-get install -y liblzma-dev
       - name: Setup ccache
         uses: hendrikmuhs/ccache-action@v1.2
         with:
@@ -106,6 +109,8 @@ jobs:
       static-has-mt: ${{ steps.check-mt.outputs.STATIC }}
       shared-has-mt: ${{ steps.check-mt.outputs.SHARED }}
     steps:
+      - name: Install system liblzma development package
+        run: sudo apt-get update && sudo apt-get install -y liblzma-dev
       - name: Checking if system library is multi threading capable
         id: check-mt
         run: |
@@ -152,6 +157,9 @@ jobs:
           architecture: x64
           cache: 'pnpm'
           cache-dependency-path: pnpm-lock.yaml
+      - name: Install system liblzma development package
+        if: ${{ matrix.use_global_liblzma == 'true' }}
+        run: sudo apt-get update && sudo apt-get install -y liblzma-dev
       - name: Setup ccache
         uses: hendrikmuhs/ccache-action@v1.2
         with:
