--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -59,7 +59,7 @@ jobs:
           cache: 'pnpm'
           cache-dependency-path: pnpm-lock.yaml
       - name: Install system liblzma development package
-        if: ${{ matrix.use_global_liblzma == 'true' }}
+        if: ${{ matrix.use_global_liblzma == true }}
         run: sudo apt-get update && sudo apt-get install -y liblzma-dev
       - name: Setup ccache
         uses: hendrikmuhs/ccache-action@v1.2
@@ -158,7 +158,7 @@ jobs:
           cache: 'pnpm'
           cache-dependency-path: pnpm-lock.yaml
       - name: Install system liblzma development package
-        if: ${{ matrix.use_global_liblzma == 'true' }}
+        if: ${{ matrix.use_global_liblzma == true }}
         run: sudo apt-get update && sudo apt-get install -y liblzma-dev
       - name: Setup ccache
         uses: hendrikmuhs/ccache-action@v1.2
